--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/Gen-pass.png" alt="" /></a>
-								<h3><a href="https://github.com/3rr0r-505/Projects.py">Gen-P@SS</a></h3>
+								<h3><a href="https://3rr0r-505.github.io/Gen-Pass/">Gen-P@SS</a></h3>
 								<p>A Random Password Generator</p>
 							</article>
 						</div>
