Update index.html (replace ClacS)

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/CalcS.png" alt="" /></a>
-								<h3><a href="https://github.com/3rr0r-505/CalcS">ClacS</a></h3>
-								<p>A Simple Scientific Calculator</p>
+								<a href="https://3rr0r-505.github.io/Tic-Tac-Tech/" class="image featured"><img src="images/TTT-logo.png" alt="" /></a>
+								<h3><a href="https://3rr0r-505.github.io/Tic-Tac-Tech/">Tic-Tac-Toe</a></h3>
+								<p> Let's Play </p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
