--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic00.png" alt="" /></a>
-								<h3><a href="https://github.com/3rr0r-505/Projects.py">Rand-M@C</a></h3>
+								<a href="https://3rr0r-505.github.io/Rand-Mac/" class="image featured"><img src="images/pic00.png" alt="" /></a>
+								<h3><a href="https://3rr0r-505.github.io/Rand-Mac/">Rand-M@C</a></h3>
 								<p>A random mac address generator</p>
 							</article>
 						</div>
