--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 								<p>A Random Password Generator</p>
 							</article>
 						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://3rr0r-505.github.io/TimeTrackHub/" class="image featured"><img src="images/clock_logo.png" alt="" /></a>
+								<h3><a href="https://3rr0r-505.github.io/TimeTrackHub/">TimeTrackHub</a></h3>
+								<p>A Random Password Generator</p>
+							</article>
+						</div>
 					</div>
 					<footer>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
