--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<article class="box style2">
 								<a href="https://3rr0r-505.github.io/TimeTrackHub/" class="image featured"><img src="images/clock_logo.png" alt="" /></a>
 								<h3><a href="https://3rr0r-505.github.io/TimeTrackHub/">TimeTrackHub</a></h3>
-								<p>A Random Password Generator</p>
+								<p>A dynamic w3b clock and stopwatch solution</p>
 							</article>
 						</div>
 					</div>
