--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
 					</header>
-					<div class="row">
+					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://3rr0r-505.github.io/Rand-Mac/" class="image featured"><img src="images/pic00.png" alt="" /></a>
