--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://3rr0r-505.github.io/TimeTrackHub/" class="image featured"><img src="images/calc.png" alt="" /></a>
+								<a href="https://3rr0r-505.github.io/TimeTrackHub/" class="image featured"><img src="images/clock_logo.png" alt="" /></a>
 								<h3><a href="https://3rr0r-505.github.io/TimeTrackHub/">TimeTrackHub</a></h3>
 								<p>A dynamic w3b clock and stopwatch</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://3rr0r-505.github.io/CalcCraft/" class="image featured"><img src="images/clock_logo.png" alt="" /></a>
+								<a href="https://3rr0r-505.github.io/CalcCraft/" class="image featured"><img src="images/calc.png" alt="" /></a>
 								<h3><a href="https://3rr0r-505.github.io/CalcCraft/">CalcCraft</a></h3>
 								<p>A w3b calculator</p>
 							</article>
