--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
 								<p>A w3b calculator</p>
 							</article>
 						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://3rr0r-505.github.io/RPS.js/" class="image featured"><img src="images/rpsGame.jpeg" alt="" /></a>
+								<h3><a href="https://3rr0r-505.github.io/RPS.js/">RPS-W3B</a></h3>
+								<p>A w3b calculator</p>
+							</article>
+						</div>
 					</div>
 					<footer>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
