--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://3rr0r-505.github.io/RPS.js/" class="image featured"><img src="images/rpsGame.jpeg" alt="" /></a>
+								<a href="https://3rr0r-505.github.io/RPS.js/" class="image featured"><img src="images/rpsGame-rmbg.png" alt="" /></a>
 								<h3><a href="https://3rr0r-505.github.io/RPS.js/">RPS-W3B</a></h3>
 								<p>A w3b calculator</p>
 							</article>
